Wed Dec 24 11:00:29 UTC 2008  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tools/Config_Handlers/Utils/XML_Helper.h:
        * tools/Config_Handlers/Utils/XML_Schema_Resolver.h:

          Fixed compile errors on Windows.

        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:

          Fixed link errors on static builds.

        * tools/IDL3_to_XMI/Literals.cpp:
        * tools/IDL3_to_XMI/Literals.h:

          Fixed a clash with macro on SunOS compilers.

        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.cpp:

          Fixed compile warnings.

Tue Dec 23 15:11:07 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.cpp:
        * tools/Config_Handlers/DynAny_Handler/DynEnum_Handler.cpp:
        * tools/Config_Handlers/Any_Handler.cpp:
        * tools/Config_Handlers/Package_Handlers/PCD_Handler.cpp:
        * tools/Config_Handlers/Package_Handlers/test.cpp:
        * tools/Config_Handlers/test.cpp:
        * tools/Config_Handlers/RT-CCM/test.cpp:

          Fixed memory leaks in the tests and made few more TCHAR
          related changes.

        * tools/Config_Handlers/Utils/XercesString.cpp:
        * tools/Config_Handlers/Utils/XercesString.h:

          XStr now can be constructed from ACE_TCHAR.

        * tools/Config_Handlers/Utils/XML_Helper.cpp:
        * tools/Config_Handlers/Utils/XML_Helper.h:
        * tools/Config_Handlers/Utils/XML_Schema_Resolver.cpp:
        * tools/Config_Handlers/Utils/XML_Schema_Resolver.h:
        * tools/Config_Handlers/Utils/XML_Error_Handler.h:
        * tools/Config_Handlers/Utils/Utils.mpc:

          Refactored the code so that XML_Helper now is a bit more
          flexible in setting xml error handler and xml schema
          resolver.

        * tools/tools.mwc:
        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.h:
        * tools/IDL3_to_XMI/be_global.cpp:
        * tools/IDL3_to_XMI/be_produce.cpp:
        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc: