@@ -80,15 +80,15 @@ namespace CIAO
         _NULL,
         ATTR,
         PUBLIC,
-        PRIVAT,
+        _PRIVATE,
         TYPEID,
         RAISES,
         RETURN,
-        IN,
+        _IN,
         INOUT,
-        OUT,
-        TRUE,
-        FALSE,
+        _OUT,
+        _TRUE,
+        _FALSE,
         CAPS_TRUE,
         CAPS_FALSE,
         MULT_OTO,
